test/sema/negative/fn_neq1.output
fn_neq1.impala:17 col 9: error: wrong argument type; expected fn[T:A](T, fn(i32)) but found fn[T:A+B](T, fn(i32))
fn_neq1.impala:18 col 9: error: wrong argument type; expected fn[T:A](T, fn(i32)) but found fn[T:A+B](T, fn(i32))
